Update12082025/7 index.html

--- a/index.html
+++ b/index.html
@@ -202,6 +202,21 @@
   <p><strong>Why choose Kaussen?</strong> Experience, reliability, clean execution, expert advice, and adaptation to Brazilian weather conditions.</p>
 </section>
 
+    <!-- Erweiterte Leistungen auf Deutsch -->
+<section style="margin-top:40px; display:none;" id="services-detailed-de">
+  <h2>Maler- und Beschichtungsarbeiten mit Qualität und Erfahrung</h2>
+  <p>Wir bringen Farbe und Schutz in alles, was Ihnen wichtig ist – innen und außen. Mit Erfahrung und professioneller Ausrüstung liefern wir präzise und langlebige Maler- und Beschichtungsarbeiten – für Gebäude, Metallkonstruktionen und mehr.</p>
+  <ul>
+    <li><strong>Innenanstrich und Raumgestaltung:</strong> Hochwertige Farben, saubere Ausführung und kreative Effekte auf Wunsch.</li>
+    <li><strong>Fassadenanstrich:</strong> Schutz vor Feuchtigkeit, Sonne und Schmutz – mit Produkten, die für brasilianische Bedingungen geeignet sind.</li>
+    <li><strong>Metall- und Stahltore lackieren:</strong> Grundierung, Schleifen und Beschichtung für langfristigen Korrosionsschutz.</li>
+    <li><strong>Spritzlackierung mit Pistole und Airless-System:</strong> Glatte und schnelle Ergebnisse auf großen Flächen oder schwer zugänglichen Bereichen.</li>
+    <li><strong>Rollen- und Pinseltechniken:</strong> Ideal für empfindliche Oberflächen oder Detailarbeiten.</li>
+  </ul>
+  <p><strong>Warum Kaussen?</strong> Erfahrung, Zuverlässigkeit, saubere Ausführung, fachkundige Beratung und Anpassung an brasilianische Wetterbedingungen.</p>
+</section>
+
+
 </p>
       <p style="height:1200px"></p>
     </section>
@@ -215,7 +230,9 @@ function changeLanguage(lang) {
 
   document.getElementById('servicos-detalhados-pt').style.display = (lang === 'pt') ? 'block' : 'none';
   document.getElementById('services-detailed-en').style.display = (lang === 'en') ? 'block' : 'none';
+  document.getElementById('services-detailed-de').style.display = (lang === 'de') ? 'block' : 'none';
 }
+
 </script>
 
 </body>
