Update12082025/8 index.html

--- a/index.html
+++ b/index.html
@@ -105,9 +105,17 @@
 
     /* Responsive: bei kleinen Bildschirmen Header-Höhe reduzieren */
     @media (max-width: 720px){
-      :root{ --header-height: 240px; }
-      .logo{ width: 86px; }
-      .header .overlay{ font-size: 0.9rem; bottom: 10px; }
+  :root{ --header-height: 240px; }
+  .logo{
+    width: 86px;
+    left: 12px; 
+  }
+  .header .overlay{
+    font-size: 0.9rem;
+    bottom: 10px;
+  }
+}
+
     }
   </style>
 </head>
