Update12082025/8 index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   :root{ --header-height: 240px; }
   .logo{
     width: 86px;
-    left: 12px; 
+    left: 12px;
+    top: 20px;
   }
   .header .overlay{
     font-size: 0.9rem;
