--- a/index.html
+++ b/index.html
@@ -225,6 +225,49 @@
   <p><strong>Warum Kaussen?</strong> Erfahrung, Zuverlässigkeit, saubere Ausführung, fachkundige Beratung und Anpassung an brasilianische Wetterbedingungen.</p>
 </section>
 
+   <!-- Reparaturen & Schweißarbeiten – Deutsch -->
+<section style="margin-top:40px; display:none;" id="services-welding-de">
+  <h2>Reparaturen und Schweißarbeiten für Tore und Überdachungen</h2>
+  <p>Kaussen Serviços bietet professionelle Schweißreparaturen für Garagen- und Eingangstore sowie individuelle Anfertigungen von Terrassenüberdachungen aus Stahl. Mit handwerklichem Geschick und zuverlässiger Ausführung sorgen wir dafür, dass Ihre Metallkonstruktionen wieder voll funktionstüchtig und optisch ansprechend sind.</p>
+  <ul>
+    <li><strong>Reparatur von Garagentoren:</strong> Risse, Brüche und lockere Verbindungen werden fachgerecht behoben.</li>
+    <li><strong>Instandsetzung von Eingangstoren:</strong> Scharniere, Rahmen und Füllungen werden stabil und sicher verschweißt.</li>
+    <li><strong>Maßgefertigte Terrassenüberdachungen:</strong> Individuelle Stahlkonstruktionen nach Wunsch – ideal für Schutz vor Sonne und Regen.</li>
+    <li><strong>Korrosionsschutz:</strong> Oberflächenbehandlung gegen Rost nach der Fertigung oder Reparatur.</li>
+    <li><strong>Vor-Ort-Service:</strong> Fachgerechte Ausführung direkt bei Ihnen – sauber, sicher und zuverlässig.</li>
+  </ul>
+  <p><strong>Warum Kaussen?</strong> Weil wir Reparaturen nicht nur beheben, sondern verbessern – mit Erfahrung, Präzision und einem hohen Qualitätsanspruch.</p>
+</section>
+
+<!-- Soldagem e reparos – Português -->
+<section style="margin-top:40px; display:none;" id="services-welding-pt">
+  <h2>Soldagem e reparos de portões e coberturas</h2>
+  <p>Na Kaussen Serviços, realizamos reparos profissionais em portões de garagem e entrada, além de fabricar coberturas de terraço personalizadas em aço. Com habilidade técnica e execução confiável, garantimos que suas estruturas metálicas fiquem funcionais e visualmente impecáveis.</p>
+  <ul>
+    <li><strong>Reparo de portões de garagem:</strong> Trincas, quebras e conexões soltas são corrigidas com precisão.</li>
+    <li><strong>Manutenção de portões de entrada:</strong> Dobradiças, estruturas e preenchimentos são soldados com segurança.</li>
+    <li><strong>Coberturas personalizadas:</strong> Estruturas de aço sob medida – ideais para proteção contra sol e chuva.</li>
+    <li><strong>Proteção contra corrosão:</strong> Tratamento da superfície após reparo ou fabricação para evitar ferrugem.</li>
+    <li><strong>Serviço no local:</strong> Execução profissional diretamente na sua residência – com limpeza e segurança.</li>
+  </ul>
+  <p><strong>Por que escolher a Kaussen?</strong> Porque não apenas reparamos – nós aprimoramos, com experiência, precisão e alto padrão de qualidade.</p>
+</section>
+
+<!-- Welding & Repairs – English -->
+<section style="margin-top:40px; display:none;" id="services-welding-en">
+  <h2>Welding and Repairs for Gates and Patio Covers</h2>
+  <p>At Kaussen Serviços, we offer professional welding repairs for garage and entrance gates, as well as custom-made steel patio covers. With skilled craftsmanship and reliable execution, we ensure your metal structures are fully functional and visually appealing again.</p>
+  <ul>
+    <li><strong>Garage gate repairs:</strong> Cracks, breaks, and loose joints are fixed with precision.</li>
+    <li><strong>Entrance gate restoration:</strong> Hinges, frames, and panels are securely welded and reinforced.</li>
+    <li><strong>Custom patio covers:</strong> Tailored steel constructions – perfect for sun and rain protection.</li>
+    <li><strong>Corrosion protection:</strong> Surface treatment after welding to prevent rust and wear.</li>
+    <li><strong>On-site service:</strong> Clean and safe execution directly at your location.</li>
+  </ul>
+  <p><strong>Why choose Kaussen?</strong> Because we don’t just repair – we enhance, with experience, precision, and a commitment to quality.</p>
+</section>
+ 
+
 
 </p>
       <p style="height:1200px"></p>
@@ -239,6 +282,10 @@
     document.getElementById('servicos-detalhados-pt').style.display = (lang === 'pt') ? 'block' : 'none';
     document.getElementById('services-detailed-en').style.display = (lang === 'en') ? 'block' : 'none';
     document.getElementById('services-detailed-de').style.display = (lang === 'de') ? 'block' : 'none';
+    document.getElementById('services-welding-pt').style.display = (lang === 'pt') ? 'block' : 'none';
+    document.getElementById('services-welding-de').style.display = (lang === 'de') ? 'block' : 'none';
+    document.getElementById('services-welding-en').style.display = (lang === 'en') ? 'block' : 'none';
+
   }
 
   // 🧠 Automatisch Sprache setzen beim Laden
