--- a/index.html
+++ b/index.html
@@ -156,14 +156,35 @@
 
 /* Mobilfreundlich */
 @media (max-width: 720px) {
-  .image-gallery img {
-    width: 48%;
-  }
-
   .painting-gallery img {
-    width: 48%;
-    max-width: 160px;
+    width: 22%; /* Vier Bilder nebeneinander */
+    max-width: none;
   }
+}
+
+/* Lightbox */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.lightbox img {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 90%;
+}
+
+.lightbox:target {
+  display: block;
 }
 </style>
 </head>
