Update13082025/3 index.html

--- a/index.html
+++ b/index.html
@@ -351,12 +351,11 @@
 </div>
 
 <style>
-}
 
 /* Mobilfreundlich */
 @media (max-width: 720px) {
-  .image-gallery img {
-    width: 48%;
+  .painting-gallery img {
+    width: calc(25% - 12px); /* 4 nebeneinander */
   }
   
 }
