Update13082025/4 index.html

--- a/index.html
+++ b/index.html
@@ -351,11 +351,12 @@
 </div>
 
 <style>
+}
 
 /* Mobilfreundlich */
 @media (max-width: 720px) {
-  .painting-gallery img {
-    width: calc(25% - 12px); /* 4 nebeneinander */
+  .image-gallery img {
+    width: 48%;
   }
   
 }
