--- a/index.html
+++ b/index.html
@@ -131,17 +131,21 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 16px;
+  gap: 12px; /* vorher 16px */
   margin-top: 30px;
 }
 
 .image-gallery img {
-  width: calc(25% - 16px);
-  max-width: 220px;
+  width: calc(23% - 12px); /* etwas schmaler */
+  max-width: 180px;        /* kleinere Maximalgröße */
   height: auto;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   object-fit: cover;
+  transition: transform 0.2s ease;
+}
+.image-gallery img:hover {
+  transform: scale(1.03);
 }
 
 /* Hover-Effekt für Malerbilder */
@@ -358,10 +362,11 @@
 /* Mobilfreundlich */
 @media (max-width: 720px) {
   .image-gallery img {
-    width: 48%;
+    width: 46%;
+    max-width: 140px;
   }
-  
 }
+
 </style>
 
 
