Update13082025/8index.html

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
 
     <!-- Bildergalerie für Maler- und Lackierarbeiten -->
 <div class="image-gallery painting-gallery">
-  <img src="malen1.jpg" alt="Innenanstrich">
-  <img src="malen2.jpg" alt="Fassadenanstrich">
-  <img src="malen3.jpg" alt="Torlackierung">
-  <img src="malen4.jpg" alt="Spritzlackierung">
+  <img src="malen1.jpg" alt="Innenanstrich"loading="lazy">
+  <img src="malen2.jpg" alt="Fassadenanstrich"loading="lazy">
+  <img src="malen3.jpg" alt="Torlackierung"loading="lazy">
+  <img src="malen4.jpg" alt="Spritzlackierung"loading="lazy">
 </div>
 
 
@@ -350,10 +350,10 @@
  
 <!-- Bildergalerie für Schweißarbeiten -->
 <div class="image-gallery">
-  <img src="bild1.jpg" alt="Schweißarbeit 1">
-  <img src="bild2.jpg" alt="Schweißarbeit 2">
-  <img src="bild3.jpg" alt="Schweißarbeit 3">
-  <img src="bild4.jpg" alt="Schweißarbeit 4">
+  <img src="bild1.jpg" alt="Schweißarbeit 1"loading="lazy">
+  <img src="bild2.jpg" alt="Schweißarbeit 2"loading="lazy">
+  <img src="bild3.jpg" alt="Schweißarbeit 3"loading="lazy">
+  <img src="bild4.jpg" alt="Schweißarbeit 4"loading="lazy">
 </div>
 
 <style>
