Update12 index.html

--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
     <!-- Bild: ersetze dateiname falls nötig -->
     <img src="Renovierung im Vergleich.png" alt="Vorher und Nachher Renovierung" class="header-img">
 
+    <div class="logo-background"></div>
+
     <!-- Logo (klein oben links) -->
     <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
 
