--- a/index.html
+++ b/index.html
@@ -39,30 +39,45 @@
     }
 
     /* Hintergrundblock für das Logo */
-.logo-background {
+.logo-container {
   position: absolute;
-  top: 36px;
+  top: 24px;
   left: 0;
-  height: 88px;
-  width: 320px;
-  background: rgba(255, 255, 255, 0.75);
-  z-index: 1005;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
+  display: flex;
+  align-items: center;
+  padding-left: 12px;
+  z-index: 1010;
 }
 
-/* Logo oben links */
-.logo {
-  position: absolute;
-  top: 40px;
-  left: 80px;
-  width: 220px;
-  height: auto;
-  z-index: 1010;
-  background: rgba(255,255,255,0.0);
-  padding: 4px;
-  border-radius: 4px;
+.logo-background {
+  background: rgba(255, 255, 255, 0.75);
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 8px 16px;
+  flex-shrink: 0;
 }
+
+.logo {
+  height: 60px;
+  width: auto;
+  margin-left: 12px;
+}
+
+@media (max-width: 720px) {
+  .logo-container {
+    top: 12px;
+    padding-left: 8px;
+  }
+
+  .logo-background {
+    padding: 6px 12px;
+    border-radius: 8px;
+  }
+
+  .logo {
+    height: 42px;
+    margin-left: 8px;
+  }
 
 /* Sprachauswahl oben rechts */
 .language-select {
@@ -225,8 +240,10 @@
 
     <div class="logo-background"></div>
 
-    <!-- Logo (klein oben links) -->
-    <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
+    <div class="logo-container">
+  <div class="logo-background"></div>
+  <img src="Kaussen_Servicos_Logo_vector_Trans_blau.svg" alt="Kaussen Serviços" class="logo">
+</div>
 
     <!-- Sprache oben rechts -->
     <select class="language-select" onchange="changeLanguage(this.value)" aria-label="Sprache wählen">
