Update2index.html

--- a/index.html
+++ b/index.html
@@ -323,12 +323,25 @@
 
     <!-- Bildergalerie für Maler- und Lackierarbeiten -->
 <div class="image-gallery painting-gallery">
-  <img src="malen1.jpg" alt="Innenanstrich"loading="lazy">
-  <img src="malen2.jpg" alt="Fassadenanstrich"loading="lazy">
-  <img src="malen3.jpg" alt="Torlackierung"loading="lazy">
-  <img src="malen4.jpg" alt="Spritzlackierung"loading="lazy">
+  <a href="#img1"><img src="malen1.jpg" alt="Innenanstrich" loading="lazy"></a>
+  <a href="#img2"><img src="malen2.jpg" alt="Fassadenanstrich" loading="lazy"></a>
+  <a href="#img3"><img src="malen3.jpg" alt="Torlackierung" loading="lazy"></a>
+  <a href="#img4"><img src="malen4.jpg" alt="Spritzlackierung" loading="lazy"></a>
 </div>
 
+<!-- Lightbox-Container -->
+<div id="img1" class="lightbox" onclick="location.href='#'">
+  <img src="malen1.jpg" alt="Innenanstrich">
+</div>
+<div id="img2" class="lightbox" onclick="location.href='#'">
+  <img src="malen2.jpg" alt="Fassadenanstrich">
+</div>
+<div id="img3" class="lightbox" onclick="location.href='#'">
+  <img src="malen3.jpg" alt="Torlackierung">
+</div>
+<div id="img4" class="lightbox" onclick="location.href='#'">
+  <img src="malen4.jpg" alt="Spritzlackierung">
+</div>
 
    <!-- Reparaturen & Schweißarbeiten – Deutsch -->
 <section style="margin-top:40px; display:none;" id="services-welding-de">
