--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
 }
 
 .image-gallery img {
-  width: calc(23% - 12px); /* etwas schmaler */
-  max-width: 180px;        /* kleinere Maximalgröße */
+  width: calc(25% - 12px); /* oder 24%, 23%, ganz egal */
+  max-width: none;         /* DAS ist entscheidend */
   height: auto;
   border-radius: 6px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
   object-fit: cover;
   transition: transform 0.2s ease;
 }
+    
 .image-gallery img:hover {
   transform: scale(1.03);
 }
