--- a/index.html
+++ b/index.html
@@ -395,18 +395,31 @@
 </div>
 
 <style>
-}
-
-/* Mobilfreundlich */
-@media (max-width: 720px) {
-  .image-gallery img {
-    width: 46%;
-    max-width: 140px;
+  .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 12px;
   }
-}
 
+  .image-gallery img {
+    flex: 1 1 22%;
+    max-width: none;
+    height: auto;
+    border-radius: 6px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+    object-fit: cover;
+    transition: transform 0.2s ease;
+  }
+
+  /* Mobilfreundlich */
+  @media (max-width: 720px) {
+    .image-gallery img {
+      width: 46%;
+      max-width: 140px;
+    }
+  }
 </style>
-
 
 </p>
       <p style="height:1200px"></p>
