--- a/index.html
+++ b/index.html
@@ -396,32 +396,44 @@
 
 <style>
   .image-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 12px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 12px;
+  margin-top: 30px;
+}
 
-  .image-gallery img {
-    flex: 1 1 22%;
-    max-width: none;
-    height: auto;
-    border-radius: 6px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    object-fit: cover;
-    transition: transform 0.2s ease;
-  }
+.image-gallery a {
+  flex: 1 1 22%;
+  max-width: none;
+}
 
-  /* Mobilfreundlich */
-  @media (max-width: 720px) {
-    .image-gallery img {
-      width: 46%;
-      max-width: 140px;
-    }
+.image-gallery img {
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
+  object-fit: cover;
+  transition: transform 0.2s ease;
+}
+
+.image-gallery img:hover {
+  transform: scale(1.03);
+}
+
+.painting-gallery img {
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+@media (max-width: 720px) {
+  .image-gallery a {
+    flex: 1 1 46%;
+    max-width: 140px;
   }
+}
+
 </style>
-
-</p>
       <p style="height:1200px"></p>
     </section>
   </main>
