Update140825/1 index.html

--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
  
 <!-- Bildergalerie für Schweißarbeiten -->
 <div class="image-gallery">
-  <img src="bild1.jpg" alt="Schweißarbeit 1"loading="lazy">
-  <img src="bild2.jpg" alt="Schweißarbeit 2"loading="lazy">
-  <img src="bild3.jpg" alt="Schweißarbeit 3"loading="lazy">
-  <img src="bild4.jpg" alt="Schweißarbeit 4"loading="lazy">
+  <img src="bild1.jpg" alt="Schweißen1"loading="lazy">
+  <img src="bild2.jpg" alt="Schweißen2"loading="lazy">
+  <img src="bild3.jpg" alt="Schweißen3"loading="lazy">
+  <img src="bild4.jpg" alt="Schweißen4"loading="lazy">
 </div>
 
 <style>
