--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
         <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
       </div>
       <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
+    <section style="margin-top:40px;" id="drywall-de">
+  <h2>Trockenbau mit Drywall – moderne Lösungen für Decken und Wände</h2>
+  <p>Die Trockenbauweise mit Drywall ist die ideale Lösung für schnelle, saubere und flexible Innenraumgestaltung. Ob beim Abhängen von Decken oder Verkleiden von Wänden – Kaussen Serviços bietet Ihnen professionelle Umsetzung mit hochwertigen Materialien.</p>
+  <ul>
+    <li><strong>Schnelle Montage:</strong> Minimale Bauzeit durch vorgefertigte Elemente.</li>
+    <li><strong>Versteckte Installationen:</strong> Kabel und Technik verschwinden elegant hinter der Wand.</li>
+    <li><strong>Akustik & Dämmung:</strong> Verbesserte Raumakustik und Wärmeschutz durch integrierte Dämmstoffe.</li>
+    <li><strong>Individuelles Design:</strong> Glatte Flächen für kreative Farbkonzepte und Beleuchtungslösungen.</li>
+    <li><strong>Brandschutz & Sicherheit:</strong> Spezielle Platten sorgen für Schutz und Stabilität.</li>
+  </ul>
+  <p><strong>Warum Kaussen?</strong> Weil wir europäisches Handwerk mit brasilianischer Flexibilität verbinden – für Ergebnisse, die überzeugen.</p>
+</section>
     </div>
 
     <div id="content-en" style="display:none">
