Update140825/retten index.html

--- a/index.html
+++ b/index.html
@@ -262,6 +262,18 @@
         <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
       </div>
       <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
+    <section style="margin-top:40px;" id="drywall-de">
+  <h2>Trockenbau mit Drywall – moderne Lösungen für Decken und Wände</h2>
+  <p>Die Trockenbauweise mit Drywall ist die ideale Lösung für schnelle, saubere und flexible Innenraumgestaltung. Ob beim Abhängen von Decken oder Verkleiden von Wänden – Kaussen Serviços bietet Ihnen professionelle Umsetzung mit hochwertigen Materialien.</p>
+  <ul>
+    <li><strong>Schnelle Montage:</strong> Minimale Bauzeit durch vorgefertigte Elemente.</li>
+    <li><strong>Versteckte Installationen:</strong> Kabel und Technik verschwinden elegant hinter der Wand.</li>
+    <li><strong>Akustik & Dämmung:</strong> Verbesserte Raumakustik und Wärmeschutz durch integrierte Dämmstoffe.</li>
+    <li><strong>Individuelles Design:</strong> Glatte Flächen für kreative Farbkonzepte und Beleuchtungslösungen.</li>
+    <li><strong>Brandschutz & Sicherheit:</strong> Spezielle Platten sorgen für Schutz und Stabilität.</li>
+  </ul>
+  <p><strong>Warum Kaussen?</strong> Weil wir europäisches Handwerk mit brasilianischer Flexibilität verbinden – für Ergebnisse, die überzeugen.</p>
+</section>
     </div>
 
     <div id="content-en" style="display:none">
@@ -371,18 +383,6 @@
   </ul>
   <p><strong>Por que escolher a Kaussen?</strong> Porque não apenas reparamos – nós aprimoramos, com experiência, precisão e alto padrão de qualidade.</p>
 </section>
-    <section id="drywall-pt" style="margin-top:40px; display:none;">
-  <h2>Drywall – soluções modernas para tetos e paredes</h2>
-  <p>A construção a seco com drywall é a solução ideal para reformas internas rápidas, limpas e flexíveis. Seja para rebaixar tetos ou revestir paredes – a Kaussen Serviços oferece execução profissional com materiais de alta qualidade.</p>
-  <ul>
-    <li><strong>Montagem rápida:</strong> Tempo mínimo de obra com elementos pré-fabricados.</li>
-    <li><strong>Instalações ocultas:</strong> Fios e tecnologia ficam discretamente escondidos atrás da parede.</li>
-    <li><strong>Acústica e isolamento:</strong> Melhor conforto térmico e sonoro com materiais integrados.</li>
-    <li><strong>Design personalizado:</strong> Superfícies lisas para cores criativas e soluções de iluminação.</li>
-    <li><strong>Proteção contra fogo e segurança:</strong> Placas especiais garantem resistência e estabilidade.</li>
-  </ul>
-  <p><strong>Por que escolher a Kaussen?</strong> Porque unimos a precisão europeia com a flexibilidade brasileira – para resultados que impressionam.</p>
-</section>
 
 <!-- Welding & Repairs – English -->
 <section style="margin-top:40px; display:none;" id="services-welding-en">
@@ -397,18 +397,6 @@
   </ul>
   <p><strong>Why choose Kaussen?</strong> Because we don’t just repair – we enhance, with experience, precision, and a commitment to quality.</p>
 </section>
-    <section id="drywall-en" style="margin-top:40px; display:none;">
-  <h2>Drywall – Modern Solutions for Ceilings and Walls</h2>
-  <p>Drywall construction is the ideal solution for fast, clean, and flexible interior renovation. Whether lowering ceilings or cladding walls – Kaussen Serviços delivers professional results using high-quality materials.</p>
-  <ul>
-    <li><strong>Quick installation:</strong> Minimal construction time with prefabricated elements.</li>
-    <li><strong>Hidden installations:</strong> Wires and technology are elegantly concealed behind the wall.</li>
-    <li><strong>Acoustics & insulation:</strong> Improved sound and thermal comfort with integrated materials.</li>
-    <li><strong>Custom design:</strong> Smooth surfaces for creative color schemes and lighting solutions.</li>
-    <li><strong>Fire protection & safety:</strong> Special panels ensure resistance and stability.</li>
-  </ul>
-  <p><strong>Why Kaussen?</strong> Because we combine European craftsmanship with Brazilian flexibility – for results that truly impress.</p>
-</section>
  
 <!-- Bildergalerie für Schweißarbeiten -->
 <div class="image-gallery">
@@ -417,45 +405,6 @@
   <img src="bild3.jpg" alt="schweissen3"loading="lazy">
   <img src="bild4.jpg" alt="schweissen4"loading="lazy">
 </div>
-
-    <section style="margin-top:40px; display:none;" id="drywall-pt">
-  <h2>Drywall – soluções modernas para tetos e paredes</h2>
-  <p>A construção a seco com drywall é a solução ideal para reformas internas rápidas, limpas e flexíveis. Seja para rebaixar tetos ou revestir paredes – a Kaussen Serviços oferece execução profissional com materiais de alta qualidade.</p>
-  <ul>
-    <li><strong>Montagem rápida:</strong> Tempo mínimo de obra com elementos pré-fabricados.</li>
-    <li><strong>Instalações ocultas:</strong> Fios e tecnologia ficam discretamente escondidos atrás da parede.</li>
-    <li><strong>Acústica e isolamento:</strong> Melhor conforto térmico e sonoro com materiais integrados.</li>
-    <li><strong>Design personalizado:</strong> Superfícies lisas para cores criativas e soluções de iluminação.</li>
-    <li><strong>Proteção contra fogo e segurança:</strong> Placas especiais garantem resistência e estabilidade.</li>
-  </ul>
-  <p><strong>Por que escolher a Kaussen?</strong> Porque unimos a precisão europeia com a flexibilidade brasileira – para resultados que impressionam.</p>
-</section>
-
-     <section style="margin-top:40px; display:none;" id="drywall-en">
-  <h2>Drywall – Modern Solutions for Ceilings and Walls</h2>
-  <p>Drywall construction is the ideal solution for fast, clean, and flexible interior renovation. Whether lowering ceilings or cladding walls – Kaussen Serviços delivers professional results using high-quality materials.</p>
-  <ul>
-    <li><strong>Quick installation:</strong> Minimal construction time with prefabricated elements.</li>
-    <li><strong>Hidden installations:</strong> Wires and technology are elegantly concealed behind the wall.</li>
-    <li><strong>Acoustics & insulation:</strong> Improved sound and thermal comfort with integrated materials.</li>
-    <li><strong>Custom design:</strong> Smooth surfaces for creative color schemes and lighting solutions.</li>
-    <li><strong>Fire protection & safety:</strong> Special panels ensure resistance and stability.</li>
-  </ul>
-  <p><strong>Why Kaussen?</strong> Because we combine European craftsmanship with Brazilian flexibility – for results that truly impress.</p>
-</section>
-
-   <section id="drywall-de" style="margin-top:40px; display:none;">
-  <h2>Trockenbau mit Drywall – moderne Lösungen für Decken und Wände</h2>
-  <p>Die Trockenbauweise mit Drywall ist die ideale Lösung für schnelle, saubere und flexible Innenraumgestaltung. Ob beim Abhängen von Decken oder Verkleiden von Wänden – Kaussen Serviços bietet Ihnen professionelle Umsetzung mit hochwertigen Materialien.</p>
-  <ul>
-    <li><strong>Schnelle Montage:</strong> Minimale Bauzeit durch vorgefertigte Elemente.</li>
-    <li><strong>Versteckte Installationen:</strong> Kabel und Technik verschwinden elegant hinter der Wand.</li>
-    <li><strong>Akustik & Dämmung:</strong> Verbesserte Raumakustik und Wärmeschutz durch integrierte Dämmstoffe.</li>
-    <li><strong>Individuelles Design:</strong> Glatte Flächen für kreative Farbkonzepte und Beleuchtungslösungen.</li>
-    <li><strong>Brandschutz & Sicherheit:</strong> Spezielle Platten sorgen für Schutz und Stabilität.</li>
-  </ul>
-  <p><strong>Warum Kaussen?</strong> Weil wir europäisches Handwerk mit brasilianischer Flexibilität verbinden – für Ergebnisse, die überzeugen.</p>
-</section> 
 
 <style>
   .image-gallery {
@@ -512,9 +461,6 @@
     document.getElementById('services-welding-pt').style.display = (lang === 'pt') ? 'block' : 'none';
     document.getElementById('services-welding-de').style.display = (lang === 'de') ? 'block' : 'none';
     document.getElementById('services-welding-en').style.display = (lang === 'en') ? 'block' : 'none';
-    document.getElementById('drywall-pt').style.display = (lang === 'pt') ? 'block' : 'none';
-    document.getElementById('drywall-de').style.display = (lang === 'de') ? 'block' : 'none';
-    document.getElementById('drywall-en').style.display = (lang === 'en') ? 'block' : 'none';
 
   }
 
