--- a/index.html
+++ b/index.html
@@ -403,20 +403,6 @@
   <img src="bild3.jpg" alt="schweissen3"loading="lazy">
   <img src="bild4.jpg" alt="schweissen4"loading="lazy">
 </div>
-    
-<!-- Drywall – Deutsch -->
-<section style="margin-top:40px; display:none;" id="drywall-de">
-  <h2>Trockenbau mit Drywall – moderne Lösungen für Decken und Wände</h2>
-  <p>Die Trockenbauweise mit Drywall ist die ideale Lösung für schnelle, saubere und flexible Innenraumgestaltung. Ob beim Abhängen von Decken oder Verkleiden von Wänden – Kaussen Serviços bietet Ihnen professionelle Umsetzung mit hochwertigen Materialien.</p>
-  <ul>
-    <li><strong>Schnelle Montage:</strong> Minimale Bauzeit durch vorgefertigte Elemente.</li>
-    <li><strong>Versteckte Installationen:</strong> Kabel und Technik verschwinden elegant hinter der Wand.</li>
-    <li><strong>Akustik & Dämmung:</strong> Verbesserte Raumakustik und Wärmeschutz durch integrierte Dämmstoffe.</li>
-    <li><strong>Individuelles Design:</strong> Glatte Flächen für kreative Farbkonzepte und Beleuchtungslösungen.</li>
-    <li><strong>Brandschutz & Sicherheit:</strong> Spezielle Platten sorgen für Schutz und Stabilität.</li>
-  </ul>
-  <p><strong>Warum Kaussen?</strong> Weil wir europäisches Handwerk mit brasilianischer Flexibilität verbinden – für Ergebnisse, die überzeugen.</p>
-</section>
 
 <!-- Drywall – Português -->
 <section style="margin-top:40px; display:none;" id="drywall-pt">
@@ -504,13 +490,11 @@
   document.getElementById('services-welding-de').style.display = (lang === 'de') ? 'block' : 'none';
   document.getElementById('services-welding-en').style.display = (lang === 'en') ? 'block' : 'none';
 
-  // ✅ Hier die Drywall-Sektionen
+  // Drywall-Sektionen
   document.getElementById('drywall-pt').style.display = (lang === 'pt') ? 'block' : 'none';
   document.getElementById('drywall-de').style.display = (lang === 'de') ? 'block' : 'none';
   document.getElementById('drywall-en').style.display = (lang === 'en') ? 'block' : 'none';
 }
-
-  }
 
   // 🧠 Automatisch Sprache setzen beim Laden
   window.addEventListener('DOMContentLoaded', () => {
@@ -520,6 +504,4 @@
 </script>
 
 
-</body>
-</html>
 
